--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,11 @@
 src = 'src'
 out = 'out'
 libs = ['lib']
+remappings = ["openzeppelin-contracts/=lib/openzeppelin-contracts/"]
 
+[rpc_endpoints]
+goerli = "${GOERLI_RPC_URL}"
+
+[etherscan]
+goerli = { key = "${ETHERSCAN_API_KEY}" }
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
