--- a/foundry.toml
+++ b/foundry.toml
@@ -1,8 +1,16 @@
 [profile.default]
 src = 'src'
 out = 'out'
+auto_detect_solc = false
+optimizer = true
+optimizer_runs = 200 # Default amount
+ffi = true
+fuzz_runs = 1_000
 libs = ['lib']
-remappings = ["openzeppelin-contracts/=lib/openzeppelin-contracts/"]
+remappings = [
+  "openzeppelin-contracts/=lib/openzeppelin-contracts/",
+  "foundry-huff=lib/foundry-huff/src/",
+]
 gas_reports = ['*']
 
 [rpc_endpoints]
